fix: 查询字段的distinct取值封装到exmple

--- a/src/main/resources/generator.properties
+++ b/src/main/resources/generator.properties
@@ -1,7 +1,7 @@
-#E\:/data/goods-recycle/recycle-server/src/main/java/
-project=D\:/workspace/mybatis-generator-jie/src/main/java
-resource=D\:/workspace/mybatis-generator-jie/src/main/resources/
-classPath=C:/developmentTool/mavenStore/mysql/mysql-connector-java/8.0.21/mysql-connector-java-8.0.21.jar
+# C:/developmentTool/mavenStore/mysql/mysql-connector-java/8.0.21/mysql-connector-java-8.0.21.jar
+classPath=E:/data/mvnRepository/mysql/mysql-connector-java/8.0.21/mysql-connector-java-8.0.21.jar
+project=./src/main/java
+resource=./src/main/resources/
 jdbc_driver = com.mysql.cj.jdbc.Driver
 
 #jdbc_url=jdbc:mysql://127.0.0.1:33061/recycle?useUnicode=true&characterEncoding=utf8
