--- a/src/main/resources/generator.properties
+++ b/src/main/resources/generator.properties
@@ -1,5 +1,5 @@
 # C:/developmentTool/mavenStore/mysql/mysql-connector-java/8.0.21/mysql-connector-java-8.0.21.jar
-classPath=E:/data/mvnRepository/mysql/mysql-connector-java/8.0.21/mysql-connector-java-8.0.21.jar
+classPath=D:/temp/mvnRepository/mysql/mysql-connector-java/8.0.21/mysql-connector-java-8.0.21.jar
 project=./src/main/java
 resource=./src/main/resources/
 jdbc_driver = com.mysql.cj.jdbc.Driver
